<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical" >
 	
    <TextView
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#999"
	    android:textSize="20sp" 
	    android:textStyle="bold"
	    android:text="@string/empresa" 
		/>
    
 <!-- Campos para Nombre de Empresa y Categoria -->	
	<TextView
	    android:id="@+id/tvEmpresa"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#999" 
		/>
	<TextView
	    android:id="@+id/tvCategoria"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#999" 
       	/>	    	    
    
<!-- Campos para Dirección física de la empresa -->		
	<TextView
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#999" 
        android:textSize="20sp" 
	    android:textStyle="bold"
	    android:text="@string/direccion"
       	/>
	
	<TextView
	    android:id="@+id/tvDireccion"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#999" 
	    />   
	    
	<TextView
	    android:id="@+id/tvPoblacion" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"	    
	    android:textColor="#999" 	        
	    />
	
<!-- Campos para E-mail y web de Empresa -->	
	<LinearLayout 
	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
    		
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:textColor="#999" 
		    android:textStyle="bold"
		    android:textSize="20sp" 
		    android:text="@string/eMail" 
		    />
	    
		<TextView
		    android:id="@+id/tvEmail" 
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"	
			android:layout_weight="1"	
			android:textColor="#999" 
			/>
	</LinearLayout>
	
	<LinearLayout 
	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
	    	    
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="3"
		    android:textColor="#999" 
		    android:textStyle="bold"
		    android:textSize="20sp" 
		    android:text="@string/web" 
		    />
	    
		<TextView
		    android:id="@+id/tvWeb" 
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"		
			android:textColor="#999" 
			/>
	</LinearLayout>
</LinearLayout>
